# project_euler

./: .gitignore  LICENSE
create_empty/: Cargo.toml
create_empty/src/: main.rs  template.rs
problems/1/: Cargo.toml
problems/1/src/: bin.rs  lib.rs
problems/2/: Cargo.toml
problems/2/src/: bin.rs  lib.rs
problems/3/: Cargo.toml
problems/3/src/: bin.rs  lib.rs
