[package]
name = "p2"
version = "0.1.0"
edition = "2021"
author = "RichardMuri"

[lib]
name = "p2lib"
path = "src/lib.rs"

[[bin]]
name = "p2"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4", features=["derive"]}